--- a/index.html
+++ b/index.html
@@ -7,6 +7,75 @@
     <title>goit-markup-hw-01</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">
+                <img src="images/logo.svg" alt="webstudio">
+            </a>
+            <ul>
+                <li><a href="#">Студия</a></li>
+                <li><a href="#">Портфолио</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <span> <a href="mailto:info@devstudio.com">info@devstudio.com</a></span>
+        <span> <a href="tel:+380961111111">+38 096 111 11 11</a></span>
+    </header>
+    <main>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+        </section>
+        <button type="button">Заказать услугу</button>
+        <div>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3>Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <h3>Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        
+        </div>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <img src="images/whatwedo1.jpg" alt="планшет с клавиатурой" width="200">
+            <img src="images/whatwedo2.jpg" alt="ноутбук с телефоном" width="200">
+            <img src="images/whatwedo3.jpg" alt="планшет" width="200">
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+           <img src="images/igordemyanenko.jpg" alt="фото Игоря Демьяненко" width="200">
+           <h4>Игорь Демьяненко</h4>
+            <p>Product Designer</p>
+           <img src="images/olgarepina.jpg" alt="Ольга Репина" width="200">
+           <h4>Ольга Репина</h4>
+            <p>Frontend Developer</p>
+           <img src="images/nikolaytarasov.jpg" alt="Николай Тарасов" width="200">
+           <h4>Николай Тарасов</h4>
+            <p>Marketing</p>
+           <img src="images/mikhailermakov.jpg" alt="Михаил Ермаков" width="200">
+           <h4>Михаил Ермаков</h4>
+            <p>UI Designer</p>
+        </section>
+
+    </main>
+    <footer>
+        <address>
+            <a href="#">
+                <img src="images/logo.svg" alt="webstudio">
+            </a>
+            <ul>
+                <li><a href="https://goo.gl/maps/XUz9GN1uXCyKH9LT6">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+            </ul>
+        </address>
+
+    </footer>
 </body>
 </html>
+
+
+
+
