--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="/">
+            <a href="#">
                 <img src="images/logo.svg" alt="webstudio">
             </a>
             <ul>
@@ -18,54 +18,72 @@
                 <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
-        <span> <a href="mailto:info@devstudio.com">info@devstudio.com</a></span>
-        <span> <a href="tel:+380961111111">+38 096 111 11 11</a></span>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
     </header>
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
         </section>
-        <button type="button">Заказать услугу</button>
-        <div>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </div>
+        <!--качества работы-->
         <section>
-            <h2>Чем мы занимаемся</h2>
-            <img src="images/whatwedo1.jpg" alt="планшет с клавиатурой" width="200">
-            <img src="images/whatwedo2.jpg" alt="ноутбук с телефоном" width="200">
-            <img src="images/whatwedo3.jpg" alt="планшет" width="200">
+                <ul>
+                    <li>
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
         </section>
+        <!--фото-->
+        <section>
+    
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="images/whatwedo1.jpg" alt="планшет с клавиатурой" width="370"></li>
+                <li> <img src="images/whatwedo2.jpg" alt="ноутбук с телефоном" width="370"></li>
+                <li><img src="images/whatwedo3.jpg" alt="планшет" width="370"></li>
+            </ul>
+        </section>
+        <!--сотрудники-->
         <section>
             <h2>Наша команда</h2>
-           <img src="images/igordemyanenko.jpg" alt="фото Игоря Демьяненко" width="200">
-           <h4>Игорь Демьяненко</h4>
-            <p>Product Designer</p>
-           <img src="images/olgarepina.jpg" alt="Ольга Репина" width="200">
-           <h4>Ольга Репина</h4>
-            <p>Frontend Developer</p>
-           <img src="images/nikolaytarasov.jpg" alt="Николай Тарасов" width="200">
-           <h4>Николай Тарасов</h4>
-            <p>Marketing</p>
-           <img src="images/mikhailermakov.jpg" alt="Михаил Ермаков" width="200">
-           <h4>Михаил Ермаков</h4>
-            <p>UI Designer</p>
+                <ul>
+                    <li>
+                        <img src="images/igordemyanenko.jpg" alt="фото Игоря Демьяненко" width="270">
+                        <h4>Игорь Демьяненко</h4>
+                        <span>Product Designer</span>
+                    </li>
+                    <li>
+                        <img src="images/olgarepina.jpg" alt="Ольга Репина" width="270">
+                        <h4>Ольга Репина</h4>
+                        <span>Frontend Developer</span>
+                    </li>
+                    <li>
+                        <img src="images/nikolaytarasov.jpg" alt="Николай Тарасов" width="270">
+                        <h4>Николай Тарасов</h4>
+                        <span>Marketing</span>
+                    </li>
+                    <li>
+                        <img src="images/mikhailermakov.jpg" alt="Михаил Ермаков" width="270">
+                        <h4>Михаил Ермаков</h4>
+                        <span>UI Designer</span>
+                    </li>
+            </ul>
         </section>
 
     </main>
