--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         </section>
         <!--фото-->
         <section>
-    
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="images/whatwedo1.jpg" alt="планшет с клавиатурой" width="370"></li>
@@ -88,14 +87,14 @@
 
     </main>
     <footer>
-        <address>
             <a href="/">
                 <img src="images/logo.svg" alt="webstudio">
             </a>
+            <addres>
             <ul>
                 <li><a href="https://goo.gl/maps/XUz9GN1uXCyKH9LT6">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
 
