--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </section>
         <!--качества работы-->
         <section>
+            <h2>особенности</h2>
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
