--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="#">
-                <img src="images/logo.svg" alt="webstudio">
+                WebStudio
             </a>
             <ul>
                 <li><a href="#">Студия</a></li>
@@ -65,22 +65,22 @@
                 <ul>
                     <li>
                         <img src="images/igordemyanenko.jpg" alt="фото Игоря Демьяненко" width="270">
-                        <h4>Игорь Демьяненко</h4>
+                        <h3>Игорь Демьяненко</h3>
                         <span>Product Designer</span>
                     </li>
                     <li>
                         <img src="images/olgarepina.jpg" alt="Ольга Репина" width="270">
-                        <h4>Ольга Репина</h4>
+                        <h3>Ольга Репина</h3>
                         <span>Frontend Developer</span>
                     </li>
                     <li>
                         <img src="images/nikolaytarasov.jpg" alt="Николай Тарасов" width="270">
-                        <h4>Николай Тарасов</h4>
+                        <h3>Николай Тарасов</h3>
                         <span>Marketing</span>
                     </li>
                     <li>
                         <img src="images/mikhailermakov.jpg" alt="Михаил Ермаков" width="270">
-                        <h4>Михаил Ермаков</h4>
+                        <h3>Михаил Ермаков</h3>
                         <span>UI Designer</span>
                     </li>
             </ul>
@@ -88,8 +88,8 @@
 
     </main>
     <footer>
-            <a href="/">
-                <img src="images/logo.svg" alt="webstudio">
+            <a href="#">
+                WebStudio
             </a>
             <addres>
             <ul>
